@@ -1,0 +1,7 @@
+
+PROJECT:=$(GSTESTDIR)
+
+ADDITIONAL_OBJC_LIBS += -lgnustep-corebase
+ADDITIONAL_INCLUDE_DIRS += -I$(PROJECT)/../Headers
+ADDITIONAL_LIB_DIRS += -L$(PROJECT)/../Source/$(GNUSTEP_OBJ_DIR)
+
